# google-adk-crashcourse

./: .gitignore  README.md  pyproject.toml  requirements.txt
1-basic-agent/greeting_agent/: agent.py
1-basic-agent/greeting_agent/.adk/: session.db
10-sequential-agents/: README.md
10-sequential-agents/lead_qualifer_agent/: agent.py
10-sequential-agents/lead_qualifer_agent/subagents/recommender/: __init__.py  agent.py
10-sequential-agents/lead_qualifer_agent/subagents/scorer/: __init__.py  agent.py
11-parallel-agents/system_monitor_agent/: agent.py
12-loop-agent/linkedin_post_agent/: agent.py
2-tool-agent/third_party_tools_agent/: agent.py
2-tool-agent/tool_agent/: agent.py
2-tool-agent/tool_agent/.adk/: session.db
3-litellm-agent/dad_joke_agent/: agent.py
3-litellm-agent/dad_joke_agent/.adk/: session.db
4-structured-output/email_agent/: agent.py
4-structured-output/email_agent/.adk/: session.db
5-sessions-and-state/: basic_stateful_session.py
5-sessions-and-state/question_answering_agent/: __init__.py  agent.py
6-persistent-storage/: main.py  utils.py
6-persistent-storage/memory_agent/: __init__.py  agent.py
7-multi-agent/: multi-agent.excalidraw
7-multi-agent/manager/: agent.py
7-multi-agent/manager/tools/: tools.py
8-stateful-multi-agent/: main.py  stateful-multiagent.excalidraw  utils.py
8-stateful-multi-agent/customer_service_agent/: agent.py
9-callbacks/before_after_agent/: agent.py
9-callbacks/before_after_model/: agent.py
9-callbacks/before_after_tool/: agent.py
(+20 files in other folders)
