[project]
name = "adk-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[database]>=1.33.0",
    "google-generativeai>=0.8.6",
    "litellm>=1.83.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
]
